# aoc-2021

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  lib.rs  main.rs
