[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
bimap = "0.6.1"
itertools = "0.10.1"
nalgebra = "0.29.0"
nom = "7.1.0"
num = "0.4.0"
strum = { version = "0.23.0", features = ["derive"] }
